--- a/architecture-examples/dart/web/index.html
+++ b/architecture-examples/dart/web/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-framework="dart">
 <head>
 	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Dart • TodoMVC</title>
 	<link rel="stylesheet" href="bower_components/todomvc-common/base.css">
 </head>
