--- a/labs/architecture-examples/firebase-angular/index.html
+++ b/labs/architecture-examples/firebase-angular/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="todomvc" data-framework="firebase">
 	<head>
 		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<title>Firebase &amp; AngularJS • TodoMVC</title>
 		<link rel="stylesheet" href="bower_components/todomvc-common/base.css">
 		<style>[ng-cloak] { display: none; }</style>
