--- a/labs/architecture-examples/meteor/app.html
+++ b/labs/architecture-examples/meteor/app.html
@@ -1,6 +1,6 @@
 <head>
 	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Meteor • TodoMVC</title>
 </head>
 <body>
