--- a/labs/architecture-examples/montage/ui/main.reel/main.html
+++ b/labs/architecture-examples/montage/ui/main.reel/main.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<title>Template • TodoMVC</title>
 		<link rel="stylesheet" href="main.css">
 		<script type="text/montage-serialization">
