--- a/labs/architecture-examples/montage/ui/todo-view.reel/todo-view.html
+++ b/labs/architecture-examples/montage/ui/todo-view.reel/todo-view.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<title>TodoView</title>
 		<script type="text/montage-serialization">
 			{
