--- a/labs/architecture-examples/o_O/index.html
+++ b/labs/architecture-examples/o_O/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-framework="funnyfacejs">
 <head>
 	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>o_O • TodoMVC</title>
 	<link rel="stylesheet" href="bower_components/todomvc-common/base.css">
 </head>
