--- a/labs/architecture-examples/plastronjs/index.html
+++ b/labs/architecture-examples/plastronjs/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-framework="plastronjs">
 <head>
 	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>PlastronJS • TodoMVC</title>
 	<link rel="stylesheet" href="bower_components/todomvc-common/base.css">
 	<style>
