Updated to meteor release 0.6.4
Closes #630

--- a/labs/architecture-examples/meteor/app.html
+++ b/labs/architecture-examples/meteor/app.html
@@ -9,7 +9,8 @@
 	</section>
 	<footer id="info">
 		<p>Double-click to edit a todo</p>
-		<p>Created by <a href="https://github.com/MStumpp">Matthias Stumpp</a></p>
+		<p>Created by Matthias Stumpp - <a href="http://github.com/MStumpp">GitHub</a>&nbsp;&nbsp;<a href="http://twitter.com/MatStumpp">Twitter</a></p>
+		<p><a href="http://todomvcapp.meteor.com">Meteor TodoMVC</a></p>
 		<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 	</footer>
 </body>
