--- a/architecture-examples/backbone/index.html
+++ b/architecture-examples/backbone/index.html
@@ -56,8 +56,8 @@
 		<script src="bower_components/backbone.localStorage/backbone.localStorage.js"></script>
 		<script src="js/models/todo.js"></script>
 		<script src="js/collections/todos.js"></script>
-		<script src="js/views/todos.js"></script>
-		<script src="js/views/app.js"></script>
+		<script src="js/views/todo-view.js"></script>
+		<script src="js/views/app-view.js"></script>
 		<script src="js/routers/router.js"></script>
 		<script src="js/app.js"></script>
 	</body>
