--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					<img class="logo" src="site/img/logo.svg" width="500" height="86" alt="TodoMVC">
 					<p>Helping you <strong>select</strong> an MV* framework</p>
 					<nav>
-						<a href="https://github.com/tastejs/todomvc/zipball/1.1.0" class="zocial red">Download (1.1)</a>
+						<a href="https://github.com/tastejs/todomvc/zipball/1.2.0" class="zocial red">Download (1.2)</a>
 						<a href="https://github.com/tastejs/todomvc" class="zocial red">View project on GitHub</a>
 					</nav>
 				</div>
@@ -156,20 +156,20 @@
 						<li class="routing">
 							<a href="architecture-examples/dart/web/" data-source="http://dartlang.org" data-content="Dart firstly targets the development of modern and large scale browser-side web apps. It's an object oriented language with a C-style syntax. It has two run modes : it can be compiled to JS, and will later run in native VM in compliant browsers (just in a dedicated Chromium provided with Dart SDK for the moment).">Dart</a>
 						</li>
-						<li class="routing labs">
-							<a href="labs/architecture-examples/batman/" data-source="http://batmanjs.org" data-content="Batman.js is a framework for building rich web applications with CoffeeScript or JavaScript. App code is concise and declarative, thanks to a powerful system of view bindings and observable properties. The API is designed with developer and designer happiness as its first priority.">Batman.js</a>
-						</li>
 						<li class="routing">
 							<a href="architecture-examples/gwt/" data-source="https://developers.google.com/web-toolkit/" data-content="Google Web Toolkit (GWT) is an MVP development toolkit for building and optimizing complex browser-based applications. GWT is used by many products at Google, including Google AdWords.">GWT</a>
+						</li>
+						<li class="routing">
+							<a href="architecture-examples/closure/" data-source="http://code.google.com/closure/library/" data-content="The Closure Library is a broad, well-tested, modular, and cross-browser JavaScript library. You can pull just what you need from a large set of reusable UI widgets and controls, and from lower-level utilities for DOM manipulation, server communication, animation, data structures, unit testing, rich-text editing, and more.">Closure</a>
+						</li>
+						<li class="routing labs">
+							<a href="labs/architecture-examples/batman/" data-source="http://batmanjs.org" data-content="Batman.js is a framework for building rich web applications with CoffeeScript or JavaScript. App code is concise and declarative, thanks to a powerful system of view bindings and observable properties. The API is designed with developer and designer happiness as its first priority.">Batman.js</a>
 						</li>
 						<li class="labs">
 							<a href="labs/architecture-examples/typescript-backbone/" data-source="http://typescriptlang.org" data-content="TypeScript is a language for application-scale JavaScript development. It offers classes, modules, interfaces and type-checking at compile time to help you build robust components.">TypeScript <br>+ Backbone.js</a>
 						</li>
 						<li class="labs routing">
 							<a href="labs/architecture-examples/typescript-angular/" data-source="http://typescriptlang.org" data-content="An AngularJS + TypeScript implementation of TodoMVC. The only significant difference between this and the vanilla Angular app is that dependency injection is done via annotated constructors, which allows minification of JavaScript.">TypeScript <br>+ AngularJS</a>
-						</li>
-						<li class="routing">
-							<a href="architecture-examples/closure/" data-source="http://code.google.com/closure/library/" data-content="The Closure Library is a broad, well-tested, modular, and cross-browser JavaScript library. You can pull just what you need from a large set of reusable UI widgets and controls, and from lower-level utilities for DOM manipulation, server communication, animation, data structures, unit testing, rich-text editing, and more.">Closure</a>
 						</li>
 						<li class="labs">
 							<a href="labs/architecture-examples/serenadejs/" data-source="https://github.com/elabs/serenade.js" data-content="Serenade.js is yet another MVC client side JavaScript framework. Why do we indulge in recreating the wheel? We believe that Serenade.js more closely follows the ideas of classical MVC than competing frameworks.">Serenade.js</a>
@@ -194,7 +194,10 @@
 						<li class="routing">
 							<a href="dependency-examples/backbone_require/" data-source="http://requirejs.org" data-content="RequireJS is a JavaScript file and module loader. It is optimized for in-browser use, but it can be used in other JavaScript environments, like Rhino and Node. Using a modular script loader like RequireJS will improve the speed and quality of your code.">Backbone.js + RequireJS</a>
 						</li>
-						<li>
+						<li class="routing">
+							<a href="dependency-examples/flight/" data-source="http://twitter.github.com/flight" data-content="Flight is a lightweight, component-based JavaScript framework that maps behavior to DOM nodes. Twitter uses it for their web applications.">Flight</a>
+						</li>
+						<li class="labs">
 							<a href="labs/dependency-examples/knockoutjs_require/" data-source="http://knockoutjs.com" data-content="This project is an adaptation of /architecture-examples/knockoutjs with require.js.">Knockout + RequireJS</a>
 						</li>
 						<li class="routing labs">
@@ -208,9 +211,6 @@
 						</li>
 						<li class="routing labs">
 							<a href="labs/dependency-examples/thorax_lumbar/public/" data-source="http://walmartlabs.github.com/lumbar" data-content="An opinionated, battle tested Backbone + Handlebars framework to build large scale web applications. This implementation uses Lumbar, a route based module loader.">Thorax + Lumbar</a>
-						</li>
-						<li class="routing">
-							<a href="dependency-examples/flight/" data-source="http://twitter.github.com/flight" data-content="Flight is a lightweight, component-based JavaScript framework that maps behavior to DOM nodes. Twitter uses it for their web applications.">Flight</a>
 						</li>
 						<li class="routing labs">
 							<a href="labs/dependency-examples/somajs_require/" data-source="http://somajs.github.com/somajs" data-content="soma.js is a framework created to build scalable and maintainable javascript applications.">soma.js + RequireJS</a>
@@ -270,27 +270,23 @@
 			<hr>
 			<div class="row">
 				<div class="span4">
-				<h2>New in 1.1 - 2013-02-14</h2>
+				<h2>New in 1.2 - 2013-08-06</h2>
 				<ul class="whats-new">
-				<li>We now have 18 stable apps and 36 in labs.
-					<label for="news-expander"><a>New since 1.0.1 ▼</a></label>
+				<li>We now have 21 stable apps and 45 in labs.
+					<label for="news-expander"><a>New since 1.1 ▼</a></label>
 					<input type="checkbox" id="news-expander">
 					<ul class="collapsed" id="new-apps">
-					<li><a href="architecture-examples/dart/web/">Dart</a></li>
-					<li><a href="labs/architecture-examples/typescript-backbone/">TypeScript + Backbone.js</a></li>
-					<li><a href="labs/architecture-examples/typescript-angular/">TypeScript + AngularJS</a></li>
-					<li><a href="labs/architecture-examples/serenadejs/">Serenade.js</a></li>
-					<li><a href="labs/dependency-examples/canjs_require/">CanJS + RequireJS</a></li>
-					<li><a href="labs/dependency-examples/chaplin-brunch/public/">Chaplin + Brunch</a></li>
-					<li><a href="labs/dependency-examples/thorax_lumbar/public/">Thorax + Lumbar</a></li>
-					<li><a href="labs/architecture-examples/kendo/">Kendo UI</a></li>
-					<li><a href="architecture-examples/canjs/">CanJS</a> replaced the JavaScriptMVC app</li>
+					<li><a href="architecture-examples/polymer/">Polymer</a></li>
+					<li><a href="dependency-examples/flight/">Flight</a></li>
+					<li><a href="labs/architecture-examples/react/">React</a></li>
+					<li><a href="vanilla-examples/vanillajs">VanillaJS Rewrite</a></li>
+					<li><a href="labs/architecture-examples/sapui5/">SAPUI5</a></li>
 					</ul>
 				</li>
-				<li>Many app frameworks and libraries have been upgraded to the latest version</li>
-				<li>XSS issues in several apps have been resolved</li>
-				<li>The homepage got reorganized with new categories</li>
+				<li>We have a brand-new Info Bar</li>
+				<li>All application now use Bower for dependency management</li>
 				<li>Various consistency fixes across all apps</li>
+				<li>Many app frameworks and libraries have been upgraded to the latest version</li>
 				</ul>
 				</div>
 				<div class="span4">
