Added Angular+Firebase example to changelog

--- a/index.html
+++ b/index.html
@@ -281,6 +281,7 @@
 					<li><a href="labs/architecture-examples/react/">React</a></li>
 					<li><a href="vanilla-examples/vanillajs">VanillaJS Rewrite</a></li>
 					<li><a href="labs/architecture-examples/sapui5/">SAPUI5</a></li>
+					<li><a href="labs/architecture-examples/firebase-angular/">AngularJS + Firebase</a></li>
 					</ul>
 				</li>
 				<li>We have a brand-new Info Bar</li>
