Added durandal example to changelog and index

--- a/index.html
+++ b/index.html
@@ -215,6 +215,9 @@
 						<li class="routing labs">
 							<a href="labs/dependency-examples/somajs_require/" data-source="http://somajs.github.com/somajs" data-content="soma.js is a framework created to build scalable and maintainable javascript applications.">soma.js + RequireJS</a>
 						</li>
+						<li class="routing labs">
+							<a href="labs/dependency-examples/durandal/" data-source="http://durandaljs.com/" data-content="Single Page Apps Done Right">Durandal</a>
+						</li>
 					</ul>
 					<hr>
 					<h2>Real-time</h2>
