--- a/vanilla-examples/vanillajs/index.html
+++ b/vanilla-examples/vanillajs/index.html
@@ -36,6 +36,7 @@
 		<footer id="info">
 			<p>Double-click to edit a todo</p>
 			<p>Created by <a href="http://twitter.com/oscargodson">Oscar Godson</a></p>
+			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 		</footer>
 		<script src="bower_components/todomvc-common/base.js"></script>
 		<script>
