link to the spec where it's mentioned in the legend
I reworded that legend entry so that "spec" is its own word, because it looked a little weird to have part of a word boldened (links are boldened).

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 					</ul>
 					<ul class="legend">
 						<li><b>*</b> <span class="label">R</span> = App also demonstrates routing</li>
-						<li><b>*</b> <span class="labs-example">Maroon</span> = App requires further work to be spec-compliant</li>
+						<li><b>*</b> <span class="labs-example">Maroon</span> = App requires further work to comply with <a href="https://github.com/tastejs/todomvc/wiki/App-Specification">the spec</a></li>
 					</ul>
 					<hr>
 					<h2>Compile To JavaScript</h2>
