site: use bower, update components
- updated Twitter Bootstrap to 2.3.2 (required small popover change)
- updated jQuery to 1.10
- used bower for dep management

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 		<meta property="og:image" content="https://raw.github.com/tastejs/todomvc/gh-pages/screenshot.png">
 		<meta property="og:description" content="Helping you select an MV* framework - Todo apps for Backbone.js, Ember.js, AngularJS, Spine and many more">
 		<link rel="shortcut icon" href="site/favicon.ico">
-		<link rel="stylesheet" href="site/css/bootstrap.min.css">
-		<link rel="stylesheet" href="site/css/bootstrap-responsive.min.css">
+		<link rel="stylesheet" href="bower_components/bootstrap/docs/assets/css/bootstrap.css">
+		<link rel="stylesheet" href="bower_components/bootstrap/docs/assets/css/bootstrap-responsive.css">
 		<link rel="stylesheet" href="site/css/main.css">
 	</head>
 	<body>
@@ -317,8 +317,8 @@
 				</p>
 			</footer>
 		</div>
-		<script src="assets/jquery.min.js"></script>
-		<script src="site/js/bootstrap.min.js"></script>
+		<script src="bower_components/jquery/jquery.min.js"></script>
+		<script src="bower_components/bootstrap/docs/assets/js/bootstrap.min.js"></script>
 		<script src="site/js/main.js"></script>
 		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.async=true;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 		<script>(function(){var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;po.src = 'https://apis.google.com/js/plusone.js';var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);})();</script>
