--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 		<meta name="twitter:card" content="summary">
 		<meta property="og:url" content="http://todomvc.com">
 		<meta property="og:title" content="TodoMVC">
-		<meta property="og:image" content="https://raw.github.com/tastejs/todomvc/gh-pages/screenshot.png">
+		<meta property="og:image" content="https://raw.github.com/tastejs/todomvc/gh-pages/site-assets/screenshot.png">
 		<meta property="og:description" content="Helping you select an MV* framework - Todo apps for Backbone.js, Ember.js, AngularJS, Spine and many more">
-		<link rel="shortcut icon" href="site/favicon.ico">
+		<link rel="shortcut icon" href="site-assets/favicon.ico">
 		<link rel="stylesheet" href="bower_components/bootstrap/docs/assets/css/bootstrap.css">
 		<link rel="stylesheet" href="bower_components/bootstrap/docs/assets/css/bootstrap-responsive.css">
-		<link rel="stylesheet" href="site/css/main.css">
+		<link rel="stylesheet" href="site-assets/main.css">
 	</head>
 	<body>
 		<div class="container">
 			<header class="row">
 				<div class="span8">
-					<img class="logo" src="site/img/logo.svg" width="500" height="86" alt="TodoMVC">
+					<img class="logo" src="site-assets/logo.svg" width="500" height="86" alt="TodoMVC">
 					<p>Helping you <strong>select</strong> an MV* framework</p>
 					<nav>
 						<a href="https://github.com/tastejs/todomvc/zipball/1.2.0" class="zocial red">Download (1.2)</a>
@@ -27,7 +27,7 @@
 					</nav>
 				</div>
 				<div class="span4">
-					<img class="logo-icon" src="site/img/logo-icon.png" width="330" height="330" alt="TodoMVC">
+					<img class="logo-icon" src="site-assets/logo-icon.png" width="330" height="330" alt="TodoMVC">
 				</div>
 			</header>
 			<div class="row">
@@ -265,7 +265,7 @@
 					</blockquote>
 				</div>
 				<div class="span6">
-					<img class="screenshot" src="site/img/screenshot.png" width="558" height="246" alt="Todo app screenshot">
+					<img class="screenshot" src="site-assets/screenshot.png" width="558" height="246" alt="Todo app screenshot">
 				</div>
 			</div>
 			<hr>
@@ -319,7 +319,7 @@
 		</div>
 		<script src="bower_components/jquery/jquery.min.js"></script>
 		<script src="bower_components/bootstrap/docs/assets/js/bootstrap.min.js"></script>
-		<script src="site/js/main.js"></script>
+		<script src="site-assets/main.js"></script>
 		<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.async=true;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 		<script>(function(){var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;po.src = 'https://apis.google.com/js/plusone.js';var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);})();</script>
 		<script>var _gaq=[['_setAccount','UA-31081062-1'],['_trackPageview']];(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];g.src='//www.google-analytics.com/ga.js';s.parentNode.insertBefore(g,s)}(document,'script'));</script>
