--- a/architecture-examples/yui/index.html
+++ b/architecture-examples/yui/index.html
@@ -53,7 +53,7 @@
 			<button id="clear-completed">Clear completed ({{completed}})</button>
 			{{/if}}
 		</script>
-		<script src="../../assets/base.js"></script>
+		<script src="bower_components/todomvc-common/base.js"></script>
 		<script src="http://yui.yahooapis.com/3.11.0/build/yui/yui-min.js"></script>
 		<script>
 			YUI({
