--- a/labs/architecture-examples/typescript-angular/index.html
+++ b/labs/architecture-examples/typescript-angular/index.html
@@ -11,22 +11,22 @@
 		<section id="todoapp" ng-controller="todoCtrl">
 			<header id="header">
 				<h1>todos</h1>
-				<form id="todo-form" ng-submit="addTodo()">
+				<form id="todo-form" ng-submit="vm.addTodo()">
 					<input id="new-todo" placeholder="What needs to be done?" ng-model="newTodo" autofocus>
 				</form>
 			</header>
 			<section id="main" ng-show="todos.length" ng-cloak>
-				<input id="toggle-all" type="checkbox" ng-model="allChecked" ng-click="markAll(allChecked)">
+				<input id="toggle-all" type="checkbox" ng-model="allChecked" ng-click="vm.markAll(allChecked)">
 				<label for="toggle-all">Mark all as complete</label>
 				<ul id="todo-list">
 					<li ng-repeat="todo in todos | filter:statusFilter" ng-class="{completed: todo.completed, editing: todo == editedTodo}">
 						<div class="view">
 							<input class="toggle" type="checkbox" ng-model="todo.completed">
-							<label ng-dblclick="editTodo(todo)">{{todo.title}}</label>
-							<button class="destroy" ng-click="removeTodo(todo)"></button>
+							<label ng-dblclick="vm.editTodo(todo)">{{todo.title}}</label>
+							<button class="destroy" ng-click="vm.removeTodo(todo)"></button>
 						</div>
-						<form ng-submit="doneEditing(todo)">
-							<input class="edit" ng-model="todo.title" todo-blur="doneEditing(todo)" todo-focus="todo == editedTodo">
+						<form ng-submit="vm.doneEditing(todo)">
+							<input class="edit" ng-model="todo.title" todo-blur="vm.doneEditing(todo)" todo-focus="todo == editedTodo">
 						</form>
 					</li>
 				</ul>
@@ -46,7 +46,7 @@
 						<a ng-class="{selected: location.path() == '/completed'}" href="#/completed">Completed</a>
 					</li>
 				</ul>
-				<button id="clear-completed" ng-click="clearDoneTodos()" ng-show="doneCount">Clear completed ({{doneCount}})</button>
+				<button id="clear-completed" ng-click="vm.clearDoneTodos()" ng-show="doneCount">Clear completed ({{doneCount}})</button>
 			</footer>
 		</section>
 		<footer id="info">
@@ -61,11 +61,6 @@
 		</footer>
 		<script src="bower_components/todomvc-common/base.js"></script>
 		<script src="bower_components/angular/angular.js"></script>
-		<script src="js/models/TodoItem.js"></script>
-		<script src="js/controllers/TodoCtrl.js"></script>
-		<script src="js/services/TodoStorage.js"></script>
-		<script src="js/directives/TodoFocus.js"></script>
-		<script src="js/directives/TodoBlur.js"></script>
 		<script src="js/Application.js"></script>
 	</body>
 </html>
