Close GH-666: Montage.

--- a/labs/architecture-examples/montage/index.html
+++ b/labs/architecture-examples/montage/index.html
@@ -4,24 +4,21 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<title>Montage • TodoMVC</title>
+
 		<link rel="stylesheet" href="bower_components/todomvc-common/base.css">
 		<link rel="stylesheet" href="assets/app.css">
 	</head>
 	<body>
-		<div id="todo-container"></div>
+		<div data-montage-id="todo-container" id="todo-container"></div>
+
 		<script src="bower_components/todomvc-common/base.js"></script>
-		<script src="bundle-0-d67ccde.js"
-			data-montage="packages/montage@4763f06/"
-			data-montage-hash="4763f06"
-			data-application-hash="1156f40"></script>
+		<script src="index.html.bundle-0.js" data-montage-location="packages/montage@6364dae/" data-promise-location="packages/q@2847ee2/" data-montage-hash="6364dae" data-promise-hash="2847ee2" data-application-hash="6607c26"></script>
 		<script type="text/montage-serialization">
 			{
 				"owner": {
 					"prototype": "montage/ui/loader.reel",
 					"properties": {
-						"element": {
-							"#": "todo-container"
-						}
+						"element": {"#": "todo-container"}
 					}
 				}
 			}
