Fix link to myself.

--- a/labs/architecture-examples/exoskeleton/index.html
+++ b/labs/architecture-examples/exoskeleton/index.html
@@ -21,7 +21,7 @@
 		</section>
 		<footer id="info">
 			<p>Double-click to edit a todo</p>
-			<p>Written by <a href="https://paulmillr.com">Paul Miller</a></p>
+			<p>Written by <a href="http://paulmillr.com">Paul Miller</a></p>
 			<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 		</footer>
 		<script type="text/template" id="item-template">
