Added lavaca example to labs

--- a/index.html
+++ b/index.html
@@ -221,6 +221,9 @@
 						<li class="routing labs">
 							<a href="labs/dependency-examples/durandal/" data-source="http://durandaljs.com/" data-content="Single Page Apps Done Right">Durandal</a>
 						</li>
+						<li class="routing labs">
+							<a href="labs/dependency-examples/lavaca_require/" data-source="http://getlavaca.com" data-content="A curated collection of tools for building mobile web applications.">Lavaca + RequireJS</a>
+						</li>
 					</ul>
 					<hr>
 					<h2>Real-time</h2>
