--- a/labs/architecture-examples/atmajs/index.html
+++ b/labs/architecture-examples/atmajs/index.html
@@ -2,7 +2,7 @@
 <html lang="en" data-framework="atmajs">
 	<head>
 		<meta charset="utf-8">
-		<title>Template • TodoMVC</title>
+		<title>Atma.js • TodoMVC</title>
 		<link rel="stylesheet" href="bower_components/todomvc-common/base.css">
 	</head>
 	<body>
