Add Atma.js to homepage, changelog

--- a/index.html
+++ b/index.html
@@ -145,6 +145,9 @@
 						<li class="routing labs">
 							<a href="labs/architecture-examples/exoskeleton/" data-source="http://exosjs.com/" data-content="A faster and leaner Backbone for your HTML5 apps.">Exoskeleton</a>
 						</li>
+						<li class="routing labs">
+							<a href="labs/architecture-examples/atmajs/" data-source="http://atmajs.com/" data-content="HMVC and the component-based architecture for building client, server or hybrid applications">Atma.js</a>
+						</li>
 					</ul>
 					<ul class="legend">
 						<li><b>*</b> <span class="label">R</span> = App also demonstrates routing</li>
