--- a/architecture-examples/knockoutjs/index.html
+++ b/architecture-examples/knockoutjs/index.html
@@ -56,8 +56,7 @@
 		<script src="bower_components/knockout.js/knockout.debug.js"></script>
 		<script src="bower_components/director/build/director.js"></script>
 		<script src="js/messageformat.js"></script>
-		<script src="js/locale/en.js"></script>
-		<script src="js/locale/pl.js"></script>
+		<script src="js/strings.js"></script>
 		<script src="js/app.js"></script>
 	</body>
 </html>
